# openai-chat-app-quickstart

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  =1.108.1  README.md  SECURITY.md  azure.yaml  deepseek.py  deepseek_openai.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer-setup.sh  devcontainer.json  devcontainer.template.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/prompts/: migrate-responses.prompt.md
.github/workflows/: azure-bicep-validate.yaml  azure-dev.yaml  codeql.yml  main_starlight-chat-assistant.yml  python-check.yaml
docs/: README.md  deploy_existing.md  local_docker.md  local_ollama.md  workshop.md
infra/: abbreviations.json  aca.bicep  getkey.sh  main.bicep  main.json  main.parameters.json
infra/core/ai/: cognitiveservices.bicep  cognitiveservices.json
infra/core/host/: container-app-upsert.bicep  container-app.bicep  container-app.json  (+3 more)
scripts/: auth_common.py  auth_init.ps1  auth_init.py  auth_init.sh  auth_update.ps1  auth_update.py  auth_update.sh  load_azd_env.sh  load_python_env.ps1  load_python_env.sh  loadenv.sh  pre-down.ps1  pre-down.py  pre-down.sh  prep.ps1  prep.sh  quickstart.py  requirements.in  requirements.txt  roles.ps1  setup_for_external_id.ps1  setup_for_external_id.py  setup_for_external_id.sh
src/: .dockerignore  Dockerfile  app.py  gunicorn.conf.py  pyproject.toml  requirements.in  requirements.txt
src/flaskapp/: __init__.py  chat.py
src/flaskapp/static/: index.js  styles.css
src/flaskapp/templates/: index.html
src/quartapp/: __init__.py  chat.py
src/quartapp/static/: styles.css
src/quartapp/templates/: index.html
test_env/: pyvenv.cfg
tests/: conftest.py  mock_cred.py  test_app.py
(+4 files in other folders)
