[project]
name = "quartapp"
version = "1.0.0"
description = "Create a simple chat app using Quart and OpenAI"
dependencies = [
    "quart",
    "werkzeug",
    "gunicorn",
    "uvicorn[standard]",
    "openai",
    "azure-identity",
    "aiohttp",
    "python-dotenv==0.21.1", # Pinned due to docker-in-docker issue: https://github.com/devcontainers/features/issues/616
    "pyyaml==5.3.1" # Pinned due to docker-in-docker issue: https://github.com/devcontainers/features/issues/616
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
